test/redefined_label.err
ERROR: line: 9, col: 1
"here" has already been defined.
