test/redefined_label.s
# Redefining a label should be an error

here:
    mov R10, R12

there:
    not R10, r10

here:
    mov r12, r10
